# connect4

./: pyproject.toml
connect4/: __init__.py  __main__.py  connect4.py  curses.py  term.py
tests/: test_connect4.py
