[tool.poetry]
name = "connect4"
version = "0.1.0"
description = ""
authors = ["Patrick Lynch <p@tricklynch.org>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
